corrected images in gallery

--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
     <section id="about" class="section-b">
       <div class="overlay">
         <div class="section-b-inner py-5">
-          <div class="animated fadeIn">
-          <h3 class="text-2">Bright & Clear</h3>
-          <h2 class="text-5 mt-1">The Companion of the Professional</h2>
-          <p class="mt-1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
-            repudiandae laboriosam quia, error tempore porro ducimus voluptate
-            laborum nostrum iure.
-          </p>
-        </div>
+            <div class="animated fadeIn">
+              <h3 class="text-2">Bright & Clear</h3>
+              <h2 class="text-5 mt-1">The Companion of the Professional</h2>
+              <p class="mt-1">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                repudiandae laboriosam quia, error tempore porro ducimus voluptate
+                laborum nostrum iure.
+              </p>
+          </div>
         </div>
       </div>
     </section>
@@ -84,16 +84,16 @@
         <a href="../img/util.jpg" class="big"
           ><img src="../img/util.jpg" alt=""
         /></a>
-        <a href="https://i.ibb.co/4pBbhfY/gal39834.jpg" class="big"
+        <a href="../img/hand2.jpg" class="big"
           ><img src="../img/hand2.jpg" alt=""
         /></a>
-        <a href="https://i.ibb.co/xSnHP7g/gal43884.jpg" class="big"
+        <a href="../img/docu.jpg" class="big"
           ><img src="../img/docu.jpg" alt=""
         /></a>
-        <a href="https://i.ibb.co/QN6Bnrb/gal4958.jpg" class="big"
+        <a href="../img/work.jpg" class="big"
           ><img src="../img/work.jpg" alt=""
         /></a>
-        <a href="https://i.ibb.co/S6FVFNt/gal74744.jpg" class="big"
+        <a href="../img/leaf.jpg" class="big"
           ><img src="../img/leaf.jpg" alt=""
         /></a>
       </div>
